--- a/src/app/part-a/part-a.component.html
+++ b/src/app/part-a/part-a.component.html
@@ -2,7 +2,7 @@
   <header>
     <h2>Temperature Unit Convertor</h2>
   </header>
-
+ <router-outlet></router-outlet>
   <form name="convert">
     <div class="form-group">
       <label for="Celcius">Celcius:</label>
@@ -22,4 +22,5 @@
   <div class="conversions">
     <p>Total Conversions: 10</p>
   </div>
+ 
 </section>
