--- a/src/app/part-b/part-b.component.html
+++ b/src/app/part-b/part-b.component.html
@@ -69,4 +69,5 @@
       <h2>Your Estimated BMI is 23.9, this is in the <span>normal range.</span></h2>
     </div>
   </div>
+  <router-outlet></router-outlet>
 </section>
